examples/pass/basics/default_init_medium.dew
// expect: 42
// Medium: default init with arithmetic and rebinding.
def x: Int;
def y: Int;
def z = x + y + 42;
def main = fn { z -> stdout; };
