examples/fail/borrow/borrow_undefined.dew
// expect error: [E007]
// & as an lvalue in arithmetic is not a statement rebind form.
def main = fn { &x = 1 + x; };
